🐛 fix : 채팅 이미지 관련 에러 수정 (#157)